--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,19 +15,17 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<BaseHead title={title} description={description} />
 		<style>
 			main {
-				width: calc(100% - 2em);
-				max-width: 100%;
-				margin: 0;
-                font-family: "SVN-Tangerine HB" !important;
+				/* width: calc(100% - 2em); */
+				/* max-width: 100%; */
 			}
 		</style>
 	</head>
 
 	<body style="background-image: url(/bg.svg)" class="bg-repeat-y">
 		<Header />
-		<main class="font-content">
+		<main class="font-content mx-auto w-2/3">
 			<article>
-				<div class="prose lg:prose-xl prose-headings:font-heading">
+				<div class="prose-xl lg:prose-2xl prose-headings:font-heading">
 					<div class="leading-none text-center mb-4 px-4">
 						<div class="mb-1 text-gray-500">
 							<FormattedDate date={pubDate} />
