--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,28 +1,60 @@
 ---
-// import BaseLayout from '../../layouts/BaseLayout.astro';
-// import BlogPost from '../../components/BlogPost.astro';
-import BlogPost from '../../layouts/BlogPost.astro';
+import { getCollection } from "astro:content";
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../../components/BaseHead.astro";
+import Header from "../../components/Header.astro";
+
 
 export async function getStaticPaths() {
-  const allPosts = await Astro.glob('../posts/*.md');
+  const allPosts = await getCollection("blog");
 
-  const uniqueTags = [...new Set(allPosts.map((post) => post.frontmatter.tags).flat())];
+  const tags: string[] = [];
 
-  return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) => post.frontmatter.tags.includes(tag));
+  allPosts.forEach((post) => {
+    post.data.tags.forEach((tag) => {
+      tags.push(tag.toLowerCase());
+    });
+  });
+
+  return Array.from(new Set(tags)).map((tag) => {
     return {
       params: { tag },
-      props: { posts: filteredPosts },
+      props: {
+        blogposts: allPosts.filter((post) =>
+          post.data.tags.map((tag) => tag.toLowerCase()).includes(tag),
+        ),
+      },
     };
   });
 }
 
+interface Props {
+  tag: string;
+  blogposts: CollectionEntry<"blog">[];
+}
+
 const { tag } = Astro.params;
-const { posts } = Astro.props;
+const { blogposts } = Astro.props;
 ---
-<BaseLayout pageTitle={tag}>
-  <p>Posts tagged with {tag}</p>
-  <ul>
-    {posts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
-  </ul>
-</BaseLayout>
+<html lang="en">
+	<head>
+		<BaseHead title={tag} description=`Tag for ${tag}` />
+	</head>
+<!-- <Layout> -->
+
+<body>
+    <Header/>
+  <main>
+    <ul>
+      {
+        blogposts.map((post) => (
+          <li>
+            <a href={`/blog/${post.slug}`}>{post.data.title}</a>
+          </li>
+        ))
+      }
+    </ul>
+  </main>
+  </body>
+  </html>
+<!-- </Layout> -->
