change the base

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -15,7 +15,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<BaseHead title={title} description={description} />
 	</head>
 
-	<body style="background-image: url(/bg.svg)" class="bg-repeat-y min-h-100rem text-blue-600">
+	<body style="background-image: url(/notable/bg.svg)" class="bg-repeat-y min-h-100rem text-blue-600">
 		<Header />
 		<main class="font-content mx-auto w-2/3 mt-12">
 			<article class="tracking-wide">
