--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -49,7 +49,7 @@ const { blogposts } = Astro.props;
       {
         blogposts.map((post) => (
           <li>
-            <a href={`/blog/${post.slug}`}>{post.data.title}</a>
+            <a href={`/notable/notes/${post.slug}`}>{post.data.title}</a>
           </li>
         ))
       }
