--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,11 +5,11 @@ import { SITE_TITLE } from '../consts';
 
 <header class="font-GrowingGarden p-5">
 	<nav class="flex justify-between items-center text-center prose prose-2xl max-w-full w-screen">
-		<h1 class="flex-center h-full flex-col m-0"><a href="/">{SITE_TITLE}</a></h1>
+		<h1 class="flex-center h-full flex-col m-0"><a href="/notable/">{SITE_TITLE}</a></h1>
 		<div class="tracking-wider text-3xl">
-			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<HeaderLink href="/notable/">Home</HeaderLink>
+			<HeaderLink href="/notable/notes">Notes</HeaderLink>
+			<HeaderLink href="/notable/about">About</HeaderLink>
 		</div>
 		<div class="flex gap-4">
 			<a href="https://facebook.com/trantanloc016" target="_blank" class="text-gray-500 hover:text-gray-700 no-underline duration-200">
