--- a/src/pages/notes/index.astro
+++ b/src/pages/notes/index.astro
@@ -24,8 +24,8 @@ const posts = (await getCollection('blog')).sort(
 					{
 						posts.map((post) => (
 							<li class="rounded-lg overflow-hidden">
-								<a href={`/blog/${post.slug}/`}>
-									<img width={720} height={360} src={post.data.heroImage} alt="" />
+								<a href={`/notable/notes/${post.slug}/`}>
+									<img width={720} height={360} src=`/notable/${post.data.heroImage}` alt="" />
 									<h4 class="title">{post.data.title}</h4>
 									<p class="date">
 										<FormattedDate date={post.data.pubDate} />
