--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -7,7 +7,8 @@ const { href, class: className, ...props } = Astro.props;
 
 const { pathname } = Astro.url;
 const subpath = pathname.match(/[^\/]+/g);
-const isActive = href === pathname || href === '/notable/' + subpath?.[0] || href === '/notable/' + subpath?.[0] + '/';
+console.log('start',href, pathname, subpath,'énd');
+const isActive = href === pathname || href === '/notable/' + subpath?.[1] || href === '/notable/' + subpath?.[1] + '/';
 ---
 
 <a href={href} class:list={[className, { active: isActive }]} {...props}>
