--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -4,7 +4,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import FormattedDate from '../components/FormattedDate.astro';
-
+import Utterances from '../components/utterances.astro';
 type Props = CollectionEntry<'blog'>['data'];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
@@ -24,9 +24,9 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 
 	<body style="background-image: url(/notable/bg.svg)" class="bg-repeat-y min-h-100rem text-blue-600">
 		<Header />
-		<main class="font-content mx-auto w-2/3 mt-12">
+		<main class="font-content mx-auto w-2/3 mt-12 mb-20">
 			<article class="tracking-wide">
-				<div class="prose-xl lg:prose-2xl prose-headings:font-heading prose-headings:text-red-400 tracking-normal">
+				<div class="prose-xl lg:prose-2xl prose-headings:font-heading prose-headings:text-red-400 tracking-normal prose-ul:list-disc">
 					<div class="leading-none text-center">
 
 						<h1 class="mb-2">{title}</h1>
@@ -46,6 +46,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 				</div>
 			</article>
 		</main>
+        <Utterances />
 		<Footer />
 	</body>
 </html>
