--- a/src/pages/notes/index.astro
+++ b/src/pages/notes/index.astro
@@ -20,7 +20,7 @@ const posts = (await getCollection('blog')).sort(
 		<Header />
 		<main>
 			<section>
-				<ul class="mx-auto grid grid-cols-3 group group-first:col-span-3 p-5 text-center max-w-max gap-8">
+				<ul class="mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 p-5 text-center max-w-max gap-8">
 					{
 						posts.map((post) => (
 							<li class="rounded-lg bg-white border-black shadow-lg drop-shadow-md hover:shadow-xl hover:-translate-y-2 pb-4 duration-200 overflow-hidden max-w-none">
