--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -26,7 +26,7 @@ const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 		<Header />
 		<main class="font-content mx-auto w-2/3 mt-12 mb-20">
 			<article class="tracking-wide">
-				<div class="prose-xl lg:prose-2xl prose-headings:font-heading prose-headings:text-red-400 tracking-normal prose-ul:list-disc">
+				<div class="prose-xl lg:prose-2xl lg:prose-p:text-3xl lg:prose-p:tracking-wider  lg:prose-p:leading-relaxed prose-headings:font-heading prose-headings:text-red-400 tracking-normal prose-ul:list-disc">
 					<div class="leading-none text-center">
 
 						<h1 class="mb-2">{title}</h1>
